--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     </div>
   </div>
 
-  <audio id="tickSound" src="https://assets.mixkit.co/sfx/preview/mixkit-tick-tock-clock-timer-1046.mp3"></audio>
-  <audio id="dingSound" src="https://assets.mixkit.co/sfx/preview/mixkit-game-show-win-siren-943.mp3"></audio>
+  <audio id="tickSound" src="a-kitchen-timer-55420.mp3"></audio>
+  <audio id="dingSound" src="clock-alarm-8761.mp3"></audio>
 
   <script>
     let scoreA = 0;
